# Feiyin-IME

./: .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md  build.bat  build.rs  gen_ico.py
.cargo/: config.toml
.github/workflows/: build-macos.yml
assets/: default-config.toml
docs/: BUILD-DEPS.md  BUILD.md  CHANGELOG.md  PRD-v0.1.md  PRD-v0.2.md  RUNTIME-DEPS.md  TDD-v0.1.md
installer/: voice-ime.iss
migrations/: 001_wordbook.sql  002_wordbook_candidates.sql
patches/ctranslate2-sys/: .cargo_vcs_info.json  Cargo.toml  build.rs
patches/esaxx-rs/: build.rs
scripts/: build-macos.sh  init-publish.ps1
src/: i18n.rs  main.rs  text_normalizer.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  crash.rs  i18n.rs  llm.rs  main.rs  overlay.rs  version_check.rs  wordbook.rs
src/audio/: mod.rs
src/config/: mod.rs
src/crash/: email.rs  mod.rs  reporter.rs  storage.rs
src/hotkey/: mod.rs
src/injection/: mod.rs
src/llm/: mod.rs
src/platform/: mod.rs
src/platform/macos/: accessibility.rs  hotkey.rs  injection.rs  mod.rs
src/platform/windows/: autolaunch.rs  event_loop.rs  hotkey.rs  injection.rs  mod.rs
src/punctuation/: mod.rs
src/transcription/: mod.rs
src/translation/: mod.rs
src/ui/: overlay.rs  tray.rs
src/version_check/: mod.rs
src/wordbook/: cache.rs  db.rs  mod.rs
tests/: __init__.py  audio_prewarm_tests.rs  conftest.py  crash_reporter_tests.rs  llm_suggestion_tests.rs  pytest.ini  run_pytest.bat  run_pytest.ps1  run_smoke.py  sendinput_hotkey.py  test_i18n.py  test_llm.py  test_tauri_commands.py  test_voice_ime.py  test_wordbook_frontend.py  test_wordbook_integration.py  test_wordbook_ui.py  ui_guard_tests.rs  wordbook_delete_tests.rs
tests/test_cases/: __init__.py  test_config.py  test_config_runtime.py  test_crash.py  test_full_pipeline_e2e.py  test_hotkey.py  test_hotkey_macos.py  test_injection.py  test_injection_macos.py  test_overlay_macos.py  test_platform.py  test_tauri_v2_capabilities.py  test_tauri_v2_commands.py  test_tauri_v2_events.py  test_tray.py  test_webview_ui.py
tests/utils/: __init__.py  state_detector.py  test_ui_opt_001.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/public/: overlay.html
ui/src/: App.test.tsx  App.tsx  main.tsx  styles.css
ui/src/i18n/: en.ts  index.ts  zh-Hans.ts  zh-Hant.ts
ui/src/pages/: About.test.tsx  About.tsx  General.tsx  HotkeySettings.tsx  Llm.tsx  Voice.test.tsx  Voice.tsx  Wordbook.test.tsx  Wordbook.tsx
ui/src/test/: setup.ts
