[package]
name = "feiyin-ime-ui"
version = "0.5.4"
description = "Settings UI for voice-ime"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
anyhow = "1"
toml = "0.8"
dirs = "5"
cpal = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
crossbeam-channel = "0.5"
atomic-write-file = "0.3.0"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Diagnostics_ToolHelp"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
